# cpp

./: .gitignore
abts_sample/: abts_tests.h
addr2line/: Makefile  README.md  test.cpp  test.map
alsa/: Makefile  alsa_capture  alsa_capture.c  alsa_info  alsa_info.c  alsa_play_pcm  alsa_play_pcm.c  alsa_play_sin  alsa_play_sin.c  play.pcm
alsa_hlw/: 1.pcm  111.pcm  Makefile  alsa_capture_hlw  alsa_capture_hlw.c  capture_min  capture_min.c  playback_min  playback_min.c
apr/: CMakeSettings.json  Makefile  README.md  toolchain.cmake
apr/include/: apr_errno.h  apr_log.h  apr_strmatch.h  apr_time.h
apr/src/: apr_base64.c  apr_dso_win32.c  apr_log_win32.c  apr_queue.c  apr_strmatch.c  apr_thread_linux.c  apr_version.c
apr/test/: abts.c  abts_tests.c  testbase64.c  testthread.c  testtime.c  testversion.c
backtrace/: backtrace
basic/: Makefile  print  print.c  type.c
c_res/: test
c_res_so/: Makefile  myso.h  test.c
cmake/: README.md
cmake/demo2/: CMakeLists.txt  README.md  main.cpp  math_func.h
cmake/demo3/: CMakeLists.txt  README.md
cmake/demo3/math/: math_func.cpp
cmake/demo4/: CMakeLists.txt  README.md  main.cpp
cmake/demo4/math/: CMakeLists.txt
cmake/demo5/: CMakeLists.txt  Makefile  README.md  main.cpp
cmake/demo5/math/: CMakeLists.txt  Makefile  cmake_install.cmake  math_func.cpp
dlib/src/: CMakeLists.txt  CMakeSettings.json  dlib.h  main.cpp  misc_api.h  sockets.h
dlib/src/misc_api/: misc_api_kernel_1.cpp  misc_api_kernel_1.h  msic_api_kernel_abstract.h
dlib/src/sockets/: sockets_kernel_1.cpp  sockets_kernel_1.h  sockets_kernel_2.cpp  sockets_kernel_2.h  sockets_kernel_abstract.h
driver_memdev/: Makefile  Makefile_test  README.md  memdev.c  read.c  write.c
effective_c++/chapter_16/: main.cpp
effective_c++/chapter_17/: main.cpp
effective_c++/chapter_18/: main.cpp
effective_c++/chapter_27/: main.cpp
effective_c++/chapter_33/: example1.cpp  example2.cpp  example3.cpp
effective_c++/chapter_35/: example1.cpp  example2.cpp  example3.cpp
gcc_1/: Makefile  README.md  math.c  math_1.c  math_1.h  test_share.c
gcc_2/: README.md
gcc_3/: Makefile  math.h  test_share  test_static
gcc_elf/: simple_section.c  simple_section_1.c  weakref.c
gcc_global_local_var/: README.md
gcc_global_local_var/1/: libA.cpp  libB.cpp
gcc_global_local_var/2/: build.sh  libB.cpp  main.cpp
gcc_global_local_var/3/: libA.cpp  libB.cpp
gcc_global_local_var/4/: build.sh  libA.cpp  libB.cpp
gcc_global_local_var/5/: build.sh  libA.cpp  libA.map  libAMath.cpp  libB.cpp  libBMath.cpp  main.cpp
gcc_link/: a.c  b.c  tiny_helloworld  tiny_helloworld.lds
lang/: struct.c
linux/addr2line/: Makefile  README.md  test.cpp
linux/backtrace/: backtrace.c
linux/c_res/: Makefile  test.c
linux/c_res_so/: README.md  myso.c  test
linux/gcc_1/: math.c
linux/gcc_2/: Makefile  README.md  math.c
linux/gcc_3/: README.md  func.c  math.c  test_static.c
linux/gcc_elf/: Makefile  hello.i
linux/gcc_global_local_var/: README.md
linux/gcc_global_local_var/1/: libA.cpp  libB.cpp
linux/gcc_global_local_var/2/: libB.cpp  main.cpp
linux/gcc_global_local_var/3/: build.sh  libA.cpp  libB.cpp
linux/gcc_global_local_var/4/: libA.cpp  libB.cpp
linux/gcc_global_local_var/5/: build.sh  libA.cpp  libB.cpp  (+3 more)
linux/gcc_link/: ab  hello.c  tiny_helloworld.c
linux/gcc_share_static/: build.sh  liba.cpp
linux/makefile_module/: README.md  config.mk  gcc.mk
linux/module_hello/: Makefile  README.md  hello.c
linux/so_ldopen/: README.md  func.c  func.h  test_share  test_share.c
linux/so_version/: 1.txt  Makefile  elf_test.cpp  func.cpp  func.h  test  test.cpp
linux/soname/: Makefile  libmylib.so.1.0.1  mylib.c  mylib.h  test_static.c
makefile_module/: README.md  config.mk  gcc.mk
makefile_module/src/: Makefile  lib.mk
math/: Makefile  coeficient_mul.c  fft  fft.cpp  horner.c
misc/abts_sample/: Makefile  README.md  abts.c  testhello.c
misc/apr/: CMakeLists.txt  apr_test  apr_test_static
misc/apr/include/: apr.h  apr_base64.h  apr_dso.h  apr_queue.h  apr_rmm.h  apr_strings.h  apr_thread.h  apr_version.h
misc/apr/src/: apr_allocater.c  apr_dso_linux.c  apr_log_linux.c  apr_rmm.c  apr_strings.c  apr_thread_win32.c  apr_time_linux.c  apr_time_win32.c
misc/apr/test/: abts_tests.h  testhello.c  testlog.c  testqueue.c  testrmm.c  teststring.c
misc/pack_with_aes/: 2.txt  Makefile  apr_aes.cpp  apr_allocater.cpp  apr_allocater.h  apr_util.h  main  res.txt
misc/quantified/: bit_op.c  fft.c  main.c
module_hello/: Makefile  README.md  hello.c
pack_with_aes/: apr_aes.h  apr_util.cpp  main.cpp  test  test.cpp
quantified/: README.md  main.c
so_ldopen/: Makefile  func.c  func.h  install.sh  math.c  test_share.c  test_static  test_static.c
soname/: Makefile  mylib.c  mylib.h  test_static.c
tokenizer/tokenizer/: cpp_tokenizer_kernel_1.h  cpp_tokenizer_kernel_c.h  directed_graph_kernel_1.h  dlib.h  graph_kernel_1.h  main.cpp  test.txt  tokenizer.sln  tokenizer.vcxproj  tokenizer.vcxproj.filters  tokenizer_kernel_1.cpp  tokenizer_kernel_1.h
(+5 files in other folders)
